# prefect-testing

./: .gitignore  README.md  Readme.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
src/: hello_deployment.py  hello_workpool.py  quickstart.py
